--- a/index.html
+++ b/index.html
@@ -1,40 +1,101 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>cbdFlora® - Ålderskontroll</title>
-  <style>
-    body {
-      background-color: #e6f5ea;
-      color: #3c8c5a;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      text-align: center;
-    }
-    h1 {
-      font-size: 36px;
-      margin-bottom: 20px;
-    }
-    button {
-      background-color: #3c8c5a;
-      color: white;
-      border: none;
-      padding: 15px 30px;
-      font-size: 18px;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #2f6844;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>cbdFlora® - Välkommen!</title>
+    <style>
+        /* Grundinställningar */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        
+        /* Huvudsektion */
+        header {
+            background-color: #3C9B3B; /* Grön som varumärket */
+            color: #fff;
+            text-align: center;
+            padding: 40px 20px;
+        }
+        
+        h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+
+        p {
+            font-size: 1.2em;
+        }
+
+        .content {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 70vh;
+        }
+
+        /* Kort formulär för åldersverifiering */
+        .form-container {
+            background-color: #fff;
+            padding: 30px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            text-align: center;
+        }
+
+        input[type="submit"] {
+            background-color: #3C9B3B; /* Grön */
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            font-size: 1.1em;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #2c7a2b;
+        }
+
+        /* Footer */
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+        }
+    </style>
 </head>
 <body>
 
-  <h1>Är du 18 år elle
+    <!-- Header -->
+    <header>
+        <h1>Välkommen till cbdFlora®</h1>
+        <p>För att komma åt vår sida, vänligen bekräfta att du är 18 år eller äldre.</p>
+    </header>
+
+    <!-- Huvudinnehåll -->
+    <div class="content">
+        <div class="form-container">
+            <form action="https://cbdflora.se" method="get">
+                <label for="ageConfirmation">
+                    <input type="checkbox" id="ageConfirmation" name="ageConfirmation" required>
+                    Jag bekräftar att jag är 18 år eller äldre.
+                </label><br><br>
+                <input type="submit" value="Bekräfta och gå vidare">
+            </form>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 cbdFlora® - Alla rättigheter förbehållna.</p>
+    </footer>
+
+</body>
+</html>
