--- a/index.html
+++ b/index.html
@@ -3,63 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cbdFlora® - Välkommen!</title>
+    <title>Välkommen till cbdFlora®</title>
     <style>
         /* Grundinställningar */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f1f1f1;
             color: #333;
         }
-        
-        /* Huvudsektion */
+
+        /* Header */
         header {
             background-color: #3C9B3B; /* Grön som varumärket */
             color: #fff;
             text-align: center;
-            padding: 40px 20px;
+            padding: 80px 20px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
-        
-        h1 {
+
+        header h1 {
             margin: 0;
-            font-size: 2.5em;
+            font-size: 3em;
+            font-weight: bold;
         }
 
-        p {
-            font-size: 1.2em;
+        header p {
+            font-size: 1.5em;
+            margin-top: 10px;
+            color: #eaeaea;
         }
 
+        /* Huvudinnehåll */
         .content {
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 70vh;
+            height: 60vh;
+            padding: 20px;
+            margin-top: 20px;
         }
 
-        /* Kort formulär för åldersverifiering */
+        /* Formulär-container */
         .form-container {
             background-color: #fff;
-            padding: 30px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            padding: 40px;
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.05);
+            border-radius: 10px;
+            width: 100%;
+            max-width: 400px;
             text-align: center;
+        }
+
+        .form-container h2 {
+            font-size: 1.8em;
+            margin-bottom: 20px;
+            color: #333;
+        }
+
+        label {
+            font-size: 1.1em;
+            color: #555;
+            margin-bottom: 15px;
+            display: block;
+        }
+
+        input[type="checkbox"] {
+            margin-right: 10px;
         }
 
         input[type="submit"] {
             background-color: #3C9B3B; /* Grön */
             color: #fff;
+            padding: 15px 30px;
+            font-size: 1.2em;
             border: none;
-            padding: 10px 20px;
-            font-size: 1.1em;
             border-radius: 5px;
             cursor: pointer;
+            width: 100%;
             transition: background-color 0.3s ease;
         }
 
         input[type="submit"]:hover {
-            background-color: #2c7a2b;
+            background-color: #2b7a2b;
         }
 
         /* Footer */
@@ -68,6 +95,36 @@
             color: #fff;
             text-align: center;
             padding: 20px 0;
+        }
+
+        footer p {
+            margin: 0;
+            font-size: 1em;
+        }
+
+        footer a {
+            color: #fff;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+        /* Media queries för mobil */
+        @media (max-width: 600px) {
+            header h1 {
+                font-size: 2.5em;
+            }
+
+            .form-container {
+                padding: 20px;
+            }
+
+            input[type="submit"] {
+                padding: 12px;
+                font-size: 1em;
+            }
         }
     </style>
 </head>
@@ -82,7 +139,8 @@
     <!-- Huvudinnehåll -->
     <div class="content">
         <div class="form-container">
-            <form action="https://cbdflora.se" method="get">
+            <h2>Åldersverifiering</h2>
+            <form id="age-verification-form">
                 <label for="ageConfirmation">
                     <input type="checkbox" id="ageConfirmation" name="ageConfirmation" required>
                     Jag bekräftar att jag är 18 år eller äldre.
@@ -94,8 +152,22 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 cbdFlora® - Alla rättigheter förbehållna.</p>
+        <p>&copy; 2025 cbdFlora® - Alla rättigheter förbehållna. <a href="https://cbdflora.se/collections/cbd-olja">Köp CBD-olja här</a></p>
     </footer>
+
+    <script>
+        // Förhindra formulärsändning om inte 18 år eller äldre bekräftas
+        document.getElementById('age-verification-form').addEventListener('submit', function(e) {
+            e.preventDefault();
+            if (document.getElementById('ageConfirmation').checked) {
+                // Skicka användaren vidare till CBD-olja-sidan
+                window.location.href = 'https://cbdflora.se/collections/cbd-olja';
+            } else {
+                alert('Du måste vara 18 år eller äldre för att fortsätta.');
+            }
+        });
+    </script>
 
 </body>
 </html>
+
