--- a/index.html
+++ b/index.html
@@ -102,22 +102,6 @@
             font-size: 1em;
         }
 
-        /* Media queries för mobil */
-        @media (max-width: 600px) {
-            header h1 {
-                font-size: 2.5em;
-            }
-
-            .form-container {
-                padding: 20px;
-            }
-
-            input[type="submit"] {
-                padding: 12px;
-                font-size: 1em;
-            }
-        }
-
         /* Åldersverifiering Overlay */
         #age-verification-overlay {
             position: fixed;
@@ -266,13 +250,4 @@
                 document.body.style.overflow = 'auto'; // Återaktivera rullning
             } else {
                 // Om åldersverifiering inte är godkänd, visa overlayn direkt
-                document.getElementById('age-verification-overlay').style.visibility = 'visible';
-                document.getElementById('age-verification-overlay').style.opacity = '1'; // Gör den synlig direkt
-                document.body.style.overflow = 'hidden'; // Förhindra rullning tills verifiering är gjord
-            }
-        });
-    </script>
-
-</body>
-</html>
-
+                document.getElementById('age-verification-overlay').style
