--- a/index.html
+++ b/index.html
@@ -3,90 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Välkommen till cbdFlora®</title>
+    <title>Åldersverifiering</title>
     <style>
-        /* Grundinställningar */
         body {
-            font-family: 'Helvetica Neue', Arial, sans-serif;
             margin: 0;
             padding: 0;
+            font-family: 'Arial', sans-serif;
             background-color: #f1f1f1;
             color: #333;
         }
 
-        /* Header */
-        header {
-            background-color: #8EBF2A; /* Grön som varumärket */
-            color: #fff;
-            text-align: center;
-            padding: 80px 20px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 3em;
-            font-weight: bold;
-        }
-
-        header p {
-            font-size: 1.5em;
-            margin-top: 10px;
-            color: #eaeaea;
-        }
-
-        /* Huvudinnehåll */
-        .content {
+        /* Åldersverifiering overlay */
+        #age-verification-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 60vh;
-            padding: 20px;
-            margin-top: 20px;
+            z-index: 9999;
+            visibility: visible;
+            opacity: 1;
         }
 
-        /* Formulär-container */
-        .form-container {
-            background-color: #fff;
+        .verification-content {
+            background-color: #ffffff;
             padding: 40px;
-            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.05);
             border-radius: 10px;
-            width: 100%;
+            width: 90%;
             max-width: 400px;
             text-align: center;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
         }
 
-        .form-container h2 {
-            font-size: 1.8em;
+        .verification-content h2 {
+            color: #8EBF2A;
+            font-size: 1.8rem;
             margin-bottom: 20px;
-            color: #333;
+            font-weight: 600;
         }
 
-        label {
-            font-size: 1.1em;
-            color: #555;
-            margin-bottom: 15px;
-            display: block;
+        .verification-content p {
+            font-size: 1.2rem;
+            color: #444;
+            margin-bottom: 20px;
         }
 
-        input[type="checkbox"] {
-            margin-right: 10px;
-        }
-
-        input[type="submit"] {
-            background-color: #8EBF2A; /* Grön */
-            color: #fff;
-            padding: 15px 30px;
-            font-size: 1.2em;
+        .verification-content button {
+            background-color: #8EBF2A;
+            color: white;
             border: none;
-            border-radius: 5px;
+            padding: 15px 30px;
+            font-size: 1.2rem;
+            border-radius: 25px;
             cursor: pointer;
             width: 100%;
             transition: background-color 0.3s ease;
         }
 
-        input[type="submit"]:hover {
-            background-color: #6a9c22;
+        .verification-content button:hover {
+            background-color: #6A9C22;
         }
 
         /* Footer */
@@ -94,167 +73,36 @@
             background-color: #333;
             color: #fff;
             text-align: center;
-            padding: 20px 0;
-        }
-
-        footer p {
-            margin: 0;
-            font-size: 1em;
-        }
-
-        /* Åldersverifiering Overlay */
-        #age-verification-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(255, 255, 255, 0.7); /* Genomskinlig vit bakgrund */
-            backdrop-filter: blur(10px); /* Lägg till oskärpa på bakgrunden */
-            z-index: 9999;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            padding: 2rem;
-            font-family: 'Helvetica Neue', sans-serif;
-            visibility: hidden; /* Starta som osynlig */
-            opacity: 0; /* Starta osynlig */
-            transition: opacity 0.2s ease-out; /* Snabbare transition */
-        }
-
-        #age-verification-overlay .container {
-            background: #f9f9f9;
-            padding: 2.5rem 2rem;
-            border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-            max-width: 420px;
-            width: 90%;
-        }
-
-        #age-verification-overlay h2 {
-            font-size: 1.8rem;
-            color: #8EBF2A;
-            margin-bottom: 1rem;
-            font-weight: medium;
-        }
-
-        #age-verification-overlay p {
-            margin-bottom: 1.5rem;
-            color: #444;
-            font-size: 1rem;
-            line-height: 1.6;
-        }
-
-        /* Knappsektion */
-        .buttons {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-        }
-
-        .buttons button {
-            padding: 0.8rem 1.5rem;
-            font-size: 1rem;
-            font-weight: bold;
-            border-radius: 30px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            width: 100%;
-        }
-
-        .buttons button.confirm {
-            background-color: #8EBF2A;
-            color: white;
-            border: none;
-        }
-
-        .buttons button.confirm:hover {
-            background-color: #6a9c22;
-        }
-
-        .buttons button.decline {
-            background-color: #eee;
-            color: #555;
-            border: 1px solid #ccc;
-        }
-
-        .buttons button.decline:hover {
-            background-color: #ddd;
+            padding: 20px;
         }
     </style>
 </head>
 <body>
 
-    <!-- Header -->
-    <header>
-        <h1>Välkommen till cbdFlora®</h1>
-        <p>För att komma åt vår sida, vänligen bekräfta att du är 18 år eller äldre.</p>
-    </header>
-
-    <!-- Huvudinnehåll -->
-    <div class="content">
-        <div class="form-container">
-            <h2>Åldersverifiering</h2>
-            <form id="age-verification-form">
-                <label for="ageConfirmation">
-                    <input type="checkbox" id="ageConfirmation" name="ageConfirmation" required>
-                    Jag bekräftar att jag är 18 år eller äldre.
-                </label><br><br>
-                <input type="submit" value="Bekräfta och gå vidare">
-            </form>
+    <!-- Åldersverifiering overlay -->
+    <div id="age-verification-overlay">
+        <div class="verification-content">
+            <img src="https://cdn.shopify.com/s/files/1/0875/8788/1305/files/cbdFlora.webp?v=1745136036" alt="cbdFlora logo" style="max-width: 150px; margin-bottom: 20px;">
+            <h2>Välkommen till cbdFlora®</h2>
+            <p>Du måste vara 18 år eller äldre för att fortsätta.</p>
+            <button onclick="confirmAge()">Jag är 18 år eller äldre</button>
         </div>
     </div>
 
-    <!-- Footer -->
     <footer>
-        <p>&copy; 2025 cbdFlora® - Alla rättigheter förbehållna.</p>
+        <p>&copy; 2025 cbdFlora®. Alla rättigheter förbehållna.</p>
     </footer>
 
-    <!-- Åldersverifiering Overlay -->
-    <div id="age-verification-overlay">
-        <div class="container">
-            <img src="https://cdn.shopify.com/s/files/1/0875/8788/1305/files/cbdFlora.webp?v=1745136036" alt="cbdFlora logotyp" style="max-width: 150px; margin: 0 auto 1.5rem auto;">
-            <h2>Hej och välkommen!</h2>
-            <p>Du måste vara minst 18 år för att besöka vår webbplats.</p>
-            <div class="buttons">
-                <button class="confirm" onclick="confirmAge()">Jag är 18 år eller äldre</button>
-                <button class="decline" onclick="leaveSite()">Nej, lämna sidan</button>
-            </div>
-        </div>
-    </div>
-
     <script>
-        // Kontrollera om åldersverifieringen redan är godkänd
+        // När användaren bekräftar sin ålder
         function confirmAge() {
-            localStorage.setItem('ageVerified', 'true');
-            document.getElementById('age-verification-overlay').style.opacity = '0'; // Göm overlay snabbt
-            setTimeout(function() {
-                document.getElementById('age-verification-overlay').style.visibility = 'hidden'; // Göm helt efter animationen
-                document.body.style.overflow = 'auto'; // Återaktivera rullning
-            }, 200); // Samma tid som transitionen (200ms)
-        }
-
-        function leaveSite() {
-            window.location.href = "https://www.google.com"; // ← Ändra till valfri extern sida
-        }
-
-        window.addEventListener('load', function () {
-            const isVerified = localStorage.getItem('ageVerified');
+            // Ta bort åldersverifieringsoverlayen
+            document.getElementById('age-verification-overlay').style.display = 'none';
             
-            // Om åldern redan är verifierad, döljs åldersverifieringen direkt
-            if (isVerified) {
-                document.getElementById('age-verification-overlay').style.visibility = 'hidden'; // Döljer direkt
-                document.getElementById('age-verification-overlay').style.opacity = '0'; // Gör den osynlig direkt
-                document.body.style.overflow = 'auto'; // Återaktivera rullning
-            } else {
-                // Om åldersverifiering inte är godkänd, visa overlayn direkt
-                document.getElementById('age-verification-overlay').style.visibility = 'visible';
-                document.getElementById('age-verification-overlay').style.opacity = '1';
-                document.body.style.overflow = 'hidden'; // Förhindra rullning
-            }
-        });
+            // Skicka användaren vidare till den valda sidan
+            window.location.href = "https://cbdflora.se/collections/cbd-olja"; // Ändra länken här om det behövs
+        }
     </script>
+
 </body>
 </html>
