--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.7); /* Genomskinlig vit bakgrund */
-  backdrop-filter: blur(10px); /* Lägg till oskärpa på bakgrunden */
+  background: rgba(255, 255, 255, 0.7);
+  backdrop-filter: blur(10px);
   z-index: 9999;
   display: flex;
   flex-direction: column;
@@ -15,9 +15,9 @@
   text-align: center;
   padding: 2rem;
   font-family: 'Helvetica Neue', sans-serif;
-  visibility: hidden; /* Starta som osynlig */
-  opacity: 0; /* Starta osynlig */
-  transition: opacity 0.2s ease-out; /* Snabbare transition */
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 0.2s ease-out;
 ">
   <div class="container" style="
     background: #f9f9f9;
@@ -27,22 +27,18 @@
     max-width: 420px;
     width: 90%;
   ">
-    <!-- Logotyp -->
     <img src="https://cdn.shopify.com/s/files/1/0875/8788/1305/files/cbdFlora.webp?v=1745136036"
          alt="cbdFlora logotyp"
          style="max-width: 150px; margin: 0 auto 1.5rem auto; display: block;">
 
-    <!-- Titel -->
     <h2 style="font-size: 1.8rem; color: #8EBF2A; margin-bottom: 1rem; font-weight: medium; font-family: 'Quincy CF', sans-serif;">
       Hej och välkommen!
     </h2>
-    
-    <!-- Text -->
+
     <p style="margin-bottom: 1.5rem; color: #444; font-size: 1rem; line-height: 1.6;">
       Du måste vara minst 18 år för att besöka vår webbplats.
     </p>
 
-    <!-- Knappsektion -->
     <div style="display: flex; flex-direction: column; gap: 1rem;">
       <button onclick="confirmAge()" style="
         background-color: #8EBF2A;
@@ -51,7 +47,7 @@
         padding: 0.8rem 1.5rem;
         font-size: 1rem;
         font-weight: bold;
-        border-radius: 30px; /* Rundade hörn med 30px */
+        border-radius: 30px;
         cursor: pointer;
         transition: background-color 0.3s ease;
       ">Jag är 18 år eller äldre</button>
@@ -62,7 +58,7 @@
         border: 1px solid #ccc;
         padding: 0.8rem 1.5rem;
         font-size: 1rem;
-        border-radius: 30px; /* Rundade hörn med 30px */
+        border-radius: 30px;
         cursor: pointer;
         transition: background-color 0.3s ease;
       ">Nej, lämna sidan</button>
@@ -71,33 +67,12 @@
 </div>
 
 <script>
-  // Kontrollera om åldersverifieringen redan är godkänd
   function confirmAge() {
-    localStorage.setItem('ageVerified', 'true');
-    document.getElementById('age-verification-overlay').style.opacity = '0'; // Göm overlay snabbt
-    setTimeout(function() {
-      document.getElementById('age-verification-overlay').style.visibility = 'hidden'; // Göm helt efter animationen
-      document.body.style.overflow = 'auto'; // Återaktivera rullning
-    }, 200); // Samma tid som transitionen (200ms)
+    window.location.href = "https://cbdflora.se"; // Skickar användaren till cbdflora.se
   }
 
   function leaveSite() {
-    window.location.href = "https://www.google.com"; // ← Ändra till valfri extern sida
+    window.location.href = "https://www.google.com"; // Skickar bort dem
   }
-
-  window.addEventListener('load', function () {
-    const isVerified = localStorage.getItem('ageVerified');
-    
-    // Om åldern redan är verifierad, döljs åldersverifieringen direkt
-    if (isVerified) {
-      document.getElementById('age-verification-overlay').style.visibility = 'hidden'; // Döljer direkt
-      document.getElementById('age-verification-overlay').style.opacity = '0'; // Gör den osynlig direkt
-      document.body.style.overflow = 'auto'; // Återaktivera rullning
-    } else {
-      // Om åldersverifiering inte är godkänd, visa overlayn direkt
-      document.getElementById('age-verification-overlay').style.visibility = 'visible';
-      document.getElementById('age-verification-overlay').style.opacity = '1'; // Gör den synlig direkt
-      document.body.style.overflow = 'hidden'; // Förhindra rullning tills verifiering är gjord
-    }
-  });
 </script>
+
