--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 ">
   <div class="container" style="
     background: #f9f9f9;
-    padding: 2rem;
+    padding: 3rem;
     border-radius: 20px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
     width: 90%;
@@ -32,33 +32,33 @@
   ">
     <img src="https://cdn.shopify.com/s/files/1/0875/8788/1305/files/cbdFlora.webp?v=1745136036"
          alt="cbdFlora logotyp"
-         style="max-width: 140px; margin: 0 auto 1.5rem; display: block;">
+         style="max-width: 160px; margin: 0 auto 2rem; display: block;">
 
     <h2 style="
-      font-size: 1.8rem;
+      font-size: 2.2rem;
       color: #8EBF2A;
-      margin-bottom: 1rem;
+      margin-bottom: 1.5rem;
       font-weight: 400;
     ">
       Hej och välkommen!
     </h2>
 
     <p style="
-      margin-bottom: 1.5rem;
+      margin-bottom: 2rem;
       color: #444;
-      font-size: 1rem;
-      line-height: 1.5;
+      font-size: 1.2rem;
+      line-height: 1.6;
     ">
       Du måste vara minst 18 år för att besöka vår webbplats.
     </p>
 
-    <div style="display: flex; flex-direction: column; gap: 1rem;">
+    <div style="display: flex; flex-direction: column; gap: 1.2rem;">
       <button onclick="confirmAge()" style="
         background-color: #8EBF2A;
         color: white;
         border: none;
-        padding: 0.8rem 1.5rem;
-        font-size: 1rem;
+        padding: 1rem 2rem;
+        font-size: 1.2rem;
         font-weight: bold;
         border-radius: 30px;
         cursor: pointer;
@@ -69,8 +69,8 @@
         background-color: #eee;
         color: #555;
         border: 1px solid #ccc;
-        padding: 0.8rem 1.5rem;
-        font-size: 1rem;
+        padding: 1rem 2rem;
+        font-size: 1.2rem;
         border-radius: 30px;
         cursor: pointer;
         transition: background-color 0.3s ease;
@@ -90,44 +90,45 @@
 </script>
 
 <style>
-  /* Gör container responsiv på ALLA enheter */
-  @media (max-width: 768px) {
+  /* Här gör vi text och box ännu större på mobiler och iPads */
+  @media (max-width: 1024px) {
     #age-verification-overlay .container {
-      padding: 1.5rem;
-      max-width: 90%;
-      margin: 1rem;
+      padding: 4rem 2rem;
+      max-width: 450px;
     }
     #age-verification-overlay h2 {
-      font-size: 1.5rem;
+      font-size: 2.5rem;
     }
     #age-verification-overlay p {
-      font-size: 0.95rem;
+      font-size: 1.4rem;
     }
     #age-verification-overlay button {
-      font-size: 0.95rem;
-      padding: 0.7rem 1.2rem;
+      font-size: 1.3rem;
+      padding: 1rem 2rem;
+    }
+    #age-verification-overlay img {
+      max-width: 180px;
+      margin-bottom: 2rem;
     }
   }
 
   @media (max-width: 480px) {
     #age-verification-overlay .container {
-      padding: 1rem;
-      max-width: 95%;
-      margin: 0.5rem;
+      padding: 4rem 1.5rem;
+      max-width: 90%;
     }
     #age-verification-overlay h2 {
-      font-size: 1.3rem;
+      font-size: 2.2rem;
     }
     #age-verification-overlay p {
-      font-size: 0.9rem;
+      font-size: 1.3rem;
     }
     #age-verification-overlay button {
-      font-size: 0.9rem;
-      padding: 0.6rem 1rem;
+      font-size: 1.2rem;
+      padding: 1rem 2rem;
     }
     #age-verification-overlay img {
-      max-width: 120px;
-      margin-bottom: 1rem;
+      max-width: 160px;
     }
   }
 </style>
