--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255, 0.8);
   backdrop-filter: blur(10px);
   z-index: 9999;
   display: flex;
@@ -17,48 +17,48 @@
   font-family: 'DM Sans', sans-serif;
   visibility: visible;
   opacity: 1;
-  transition: opacity 0.2s ease-out;
+  transition: opacity 0.3s ease-out;
   overflow-y: auto;
 ">
-  <div class="container" style="
+  <div style="
     background: #f9f9f9;
-    padding: 3rem;
+    padding: 4rem;
     border-radius: 20px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-    width: 90%;
-    max-width: 400px;
+    width: 100%;
+    max-width: 600px;
     box-sizing: border-box;
     margin: 2rem;
   ">
     <img src="https://cdn.shopify.com/s/files/1/0875/8788/1305/files/cbdFlora.webp?v=1745136036"
          alt="cbdFlora logotyp"
-         style="max-width: 160px; margin: 0 auto 2rem; display: block;">
+         style="max-width: 200px; margin: 0 auto 2rem; display: block;">
 
     <h2 style="
-      font-size: 2.2rem;
+      font-size: 3rem;
       color: #8EBF2A;
-      margin-bottom: 1.5rem;
+      margin-bottom: 2rem;
       font-weight: 400;
     ">
-      Hej och välkommen!
+      Hej och Välkommen
     </h2>
 
     <p style="
-      margin-bottom: 2rem;
+      margin-bottom: 3rem;
       color: #444;
-      font-size: 1.2rem;
-      line-height: 1.6;
+      font-size: 1.8rem;
+      line-height: 1.7;
     ">
       Du måste vara minst 18 år för att besöka vår webbplats.
     </p>
 
-    <div style="display: flex; flex-direction: column; gap: 1.2rem;">
+    <div style="display: flex; flex-direction: column; gap: 1.5rem;">
       <button onclick="confirmAge()" style="
         background-color: #8EBF2A;
         color: white;
         border: none;
-        padding: 1rem 2rem;
-        font-size: 1.2rem;
+        padding: 1.5rem 2.5rem;
+        font-size: 1.6rem;
         font-weight: bold;
         border-radius: 30px;
         cursor: pointer;
@@ -69,8 +69,8 @@
         background-color: #eee;
         color: #555;
         border: 1px solid #ccc;
-        padding: 1rem 2rem;
-        font-size: 1.2rem;
+        padding: 1.5rem 2.5rem;
+        font-size: 1.6rem;
         border-radius: 30px;
         cursor: pointer;
         transition: background-color 0.3s ease;
@@ -89,46 +89,3 @@
   }
 </script>
 
-<style>
-  /* Här gör vi text och box ännu större på mobiler och iPads */
-  @media (max-width: 1024px) {
-    #age-verification-overlay .container {
-      padding: 4rem 2rem;
-      max-width: 450px;
-    }
-    #age-verification-overlay h2 {
-      font-size: 2.5rem;
-    }
-    #age-verification-overlay p {
-      font-size: 1.4rem;
-    }
-    #age-verification-overlay button {
-      font-size: 1.3rem;
-      padding: 1rem 2rem;
-    }
-    #age-verification-overlay img {
-      max-width: 180px;
-      margin-bottom: 2rem;
-    }
-  }
-
-  @media (max-width: 480px) {
-    #age-verification-overlay .container {
-      padding: 4rem 1.5rem;
-      max-width: 90%;
-    }
-    #age-verification-overlay h2 {
-      font-size: 2.2rem;
-    }
-    #age-verification-overlay p {
-      font-size: 1.3rem;
-    }
-    #age-verification-overlay button {
-      font-size: 1.2rem;
-      padding: 1rem 2rem;
-    }
-    #age-verification-overlay img {
-      max-width: 160px;
-    }
-  }
-</style>
