--- a/index.html
+++ b/index.html
@@ -1,66 +1,57 @@
 <!-- Åldersverifiering - Klistra in innan </body> i theme.liquid -->
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400&display=swap" rel="stylesheet">
-
 <div id="age-verification-overlay" style="
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.8);
-  backdrop-filter: blur(10px);
+  background: rgba(255, 255, 255, 0.7); /* Genomskinlig vit bakgrund */
+  backdrop-filter: blur(10px); /* Lägg till oskärpa på bakgrunden */
   z-index: 9999;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-family: 'DM Sans', sans-serif;
-  visibility: visible;
-  opacity: 1;
-  transition: opacity 0.3s ease-out;
-  overflow-y: auto;
+  padding: 2rem;
+  font-family: 'Helvetica Neue', sans-serif;
+  visibility: hidden; /* Starta som osynlig */
+  opacity: 0; /* Starta osynlig */
+  transition: opacity 0.2s ease-out; /* Snabbare transition */
 ">
-  <div style="
+  <div class="container" style="
     background: #f9f9f9;
-    padding: 4rem;
+    padding: 2.5rem 2rem;
     border-radius: 20px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 600px;
-    box-sizing: border-box;
-    margin: 2rem;
+    max-width: 420px;
+    width: 90%;
   ">
+    <!-- Logotyp -->
     <img src="https://cdn.shopify.com/s/files/1/0875/8788/1305/files/cbdFlora.webp?v=1745136036"
          alt="cbdFlora logotyp"
-         style="max-width: 200px; margin: 0 auto 2rem; display: block;">
+         style="max-width: 150px; margin: 0 auto 1.5rem auto; display: block;">
 
-    <h2 style="
-      font-size: 3rem;
-      color: #8EBF2A;
-      margin-bottom: 2rem;
-      font-weight: 400;
-    ">
-      Hej och Välkommen
+    <!-- Titel -->
+    <h2 style="font-size: 1.8rem; color: #8EBF2A; margin-bottom: 1rem; font-weight: medium; font-family: 'Quincy CF', sans-serif;">
+      Hej och välkommen!
     </h2>
-
-    <p style="
-      margin-bottom: 3rem;
-      color: #444;
-      font-size: 1.8rem;
-      line-height: 1.7;
-    ">
+    
+    <!-- Text -->
+    <p style="margin-bottom: 1.5rem; color: #444; font-size: 1rem; line-height: 1.6;">
       Du måste vara minst 18 år för att besöka vår webbplats.
     </p>
 
-    <div style="display: flex; flex-direction: column; gap: 1.5rem;">
+    <!-- Knappsektion -->
+    <div style="display: flex; flex-direction: column; gap: 1rem;">
       <button onclick="confirmAge()" style="
         background-color: #8EBF2A;
         color: white;
         border: none;
-        padding: 1.5rem 2.5rem;
-        font-size: 1.6rem;
+        padding: 0.8rem 1.5rem;
+        font-size: 1rem;
         font-weight: bold;
-        border-radius: 30px;
+        border-radius: 30px; /* Rundade hörn med 30px */
         cursor: pointer;
         transition: background-color 0.3s ease;
       ">Jag är 18 år eller äldre</button>
@@ -69,9 +60,9 @@
         background-color: #eee;
         color: #555;
         border: 1px solid #ccc;
-        padding: 1.5rem 2.5rem;
-        font-size: 1.6rem;
-        border-radius: 30px;
+        padding: 0.8rem 1.5rem;
+        font-size: 1rem;
+        border-radius: 30px; /* Rundade hörn med 30px */
         cursor: pointer;
         transition: background-color 0.3s ease;
       ">Nej, lämna sidan</button>
@@ -80,12 +71,33 @@
 </div>
 
 <script>
+  // Kontrollera om åldersverifieringen redan är godkänd
   function confirmAge() {
-    window.location.href = "https://cbdflora.se";
+    localStorage.setItem('ageVerified', 'true');
+    document.getElementById('age-verification-overlay').style.opacity = '0'; // Göm overlay snabbt
+    setTimeout(function() {
+      document.getElementById('age-verification-overlay').style.visibility = 'hidden'; // Göm helt efter animationen
+      document.body.style.overflow = 'auto'; // Återaktivera rullning
+    }, 200); // Samma tid som transitionen (200ms)
   }
 
   function leaveSite() {
-    window.location.href = "https://www.google.com";
+    window.location.href = "https://www.google.com"; // ← Ändra till valfri extern sida
   }
-</script>
 
+  window.addEventListener('load', function () {
+    const isVerified = localStorage.getItem('ageVerified');
+    
+    // Om åldern redan är verifierad, döljs åldersverifieringen direkt
+    if (isVerified) {
+      document.getElementById('age-verification-overlay').style.visibility = 'hidden'; // Döljer direkt
+      document.getElementById('age-verification-overlay').style.opacity = '0'; // Gör den osynlig direkt
+      document.body.style.overflow = 'auto'; // Återaktivera rullning
+    } else {
+      // Om åldersverifiering inte är godkänd, visa overlayn direkt
+      document.getElementById('age-verification-overlay').style.visibility = 'visible';
+      document.getElementById('age-verification-overlay').style.opacity = '1'; // Gör den synlig direkt
+      document.body.style.overflow = 'hidden'; // Förhindra rullning tills verifiering är gjord
+    }
+  });
+</script>
