--- a/index.html
+++ b/index.html
@@ -25,44 +25,44 @@
 
 #age-verification-container {
   background: #f9f9f9;
-  padding: 5rem 4rem;
-  border-radius: 25px;
+  padding: 4rem 3rem;
+  border-radius: 20px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
   width: 100%;
   max-width: 600px;
 }
 
 #age-verification-container img {
-  max-width: 220px;
-  margin: 0 auto 2.5rem auto;
+  max-width: 200px;
+  margin: 0 auto 2rem auto;
   display: block;
 }
 
 #age-verification-container h2 {
-  font-size: 3.5rem;
+  font-size: 3rem;
   color: #8EBF2A;
-  margin-bottom: 2.5rem;
+  margin-bottom: 2rem;
   font-weight: 400;
 }
 
 #age-verification-container p {
-  margin-bottom: 3rem;
+  margin-bottom: 2.5rem;
   color: #444;
-  font-size: 2rem;
-  line-height: 1.8;
+  font-size: 1.6rem;
+  line-height: 1.6;
 }
 
 .age-verification-buttons {
   display: flex;
   flex-direction: column;
-  gap: 1.8rem;
+  gap: 1.5rem;
 }
 
 .age-verification-buttons button {
-  padding: 1.5rem 2.5rem;
-  font-size: 1.8rem;
+  padding: 1.2rem 2rem;
+  font-size: 1.6rem;
   font-weight: bold;
-  border-radius: 35px;
+  border-radius: 30px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
@@ -79,37 +79,37 @@
   border: 1px solid #ccc;
 }
 
-/* RESPONSIV FÖRSTÄRKNING */
+/* RESPONSIV FÖR MOBIL OCH IPAD */
 @media (max-width: 768px) {
   #age-verification-container {
-    padding: 6rem 3rem;
+    padding: 5rem 2rem;
     max-width: 90%;
   }
   #age-verification-container h2 {
-    font-size: 4rem;
+    font-size: 3.5rem;
   }
   #age-verification-container p {
-    font-size: 2.4rem;
+    font-size: 2rem;
   }
   .age-verification-buttons button {
-    font-size: 2.2rem;
-    padding: 2rem 2.5rem;
+    font-size: 1.8rem;
+    padding: 1.8rem 2rem;
   }
 }
 
 @media (max-width: 480px) {
   #age-verification-container {
-    padding: 7rem 2rem;
+    padding: 5rem 1.5rem;
   }
   #age-verification-container h2 {
-    font-size: 4.5rem;
+    font-size: 3.8rem;
   }
   #age-verification-container p {
-    font-size: 2.8rem;
+    font-size: 2.2rem;
   }
   .age-verification-buttons button {
-    font-size: 2.4rem;
-    padding: 2.5rem;
+    font-size: 2rem;
+    padding: 2rem 2.5rem;
   }
 }
 </style>
@@ -135,3 +135,4 @@ function leaveSite() {
   window.location.href = "https://www.google.com";
 }
 </script>
+
