--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       color: #555;
     }
     .btn {
-      background-color: #2e7d32;
+      background-color: #8EBF2A;
       color: #ffffff;
       padding: 12px 24px;
       border: none;
