--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     }
     h1 {
       margin-bottom: 20px;
-      color: #2e7d32; /* Grön färg */
+      color: #8EBF2A; /* NY färg här */
     }
     p {
       margin-bottom: 30px;
       color: #555;
     }
     .btn {
-      background-color: #8EBF2A;
+      background-color: #8EBF2A; /* NY färg här */
       color: #ffffff;
       padding: 12px 24px;
       border: none;
@@ -45,7 +45,7 @@
       transition: background-color 0.3s ease;
     }
     .btn:hover {
-      background-color: #1b5e20;
+      background-color: #6f991f; /* Lite mörkare version vid hover */
     }
     .btn-secondary {
       background-color: #cccccc;
@@ -74,3 +74,4 @@
   </script>
 </body>
 </html>
+
