--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
   <div class="container">
     <h1>Är du över 18 år?</h1>
-    <p>Du måste vara minst 18 år för att gå vidare till cbdFlora®.</p>
+    <p>Du måste vara över 18 år för att använda den här webbplatsen</p>
     <button class="btn" onclick="redirect()">Ja</button>
     <button class="btn btn-secondary" onclick="deny()">Nej</button>
   </div>
