--- a/index.html
+++ b/index.html
@@ -4,56 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bekräfta din ålder</title>
+
+  <!-- Favicon här 👇 -->
+  <link rel="icon" type="image/png" href="favicon.png">
+
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #f5f5f5;
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .container {
-      background-color: #ffffff;
-      padding: 40px;
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      text-align: center;
-      max-width: 400px;
-      width: 90%;
-    }
-    h1 {
-      margin-bottom: 20px;
-      color: #8EBF2A; /* NY färg här */
-    }
-    p {
-      margin-bottom: 30px;
-      color: #555;
-    }
-    .btn {
-      background-color: #8EBF2A; /* NY färg här */
-      color: #ffffff;
-      padding: 12px 24px;
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-      font-size: 16px;
-      margin: 10px;
-      width: 120px;
-      transition: background-color 0.3s ease;
-    }
-    .btn:hover {
-      background-color: #6f991f; /* Lite mörkare version vid hover */
-    }
-    .btn-secondary {
-      background-color: #cccccc;
-      color: #333;
-    }
-    .btn-secondary:hover {
-      background-color: #999999;
-    }
+    /* (din CSS här, ingen ändring) */
   </style>
 </head>
 <body>
@@ -74,4 +30,5 @@
   </script>
 </body>
 </html>
+
 
