--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <script>
     function redirect() {
-      window.location.href = "https://cbdflora.se";
+      window.location.href = "https://cbdflora.se/collections/cbd-olja";
     }
     function deny() {
       alert("Du måste vara över 18 år för att fortsätta.");
