--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
     }
     .btn:hover {
       background-color: #6f991f; /* Lite mörkare version vid hover */
-    }
+ }
     .btn-secondary {
-      background-color: #cccccc;
-      color: #333;
+      background-color: transparent;
+      color: #000000;
+      border: 1px solid #000000;
     }
     .btn-secondary:hover {
       background-color: #999999;
