--- a/index.html
+++ b/index.html
@@ -168,6 +168,10 @@ src="https://www.facebook.com/tr?id=1602398350422066&ev=PageView&noscript=1"
       }
     }
     <script>
+  </script>
+</body>
+</html>
+<script>
   fetch("https://ipapi.co/json/")
     .then(response => response.json())
     .then(data => {
@@ -191,7 +195,4 @@ src="https://www.facebook.com/tr?id=1602398350422066&ev=PageView&noscript=1"
       console.error("Geo lookup failed", error);
     });
 </script>
-
-  </script>
 </body>
-</html>
